spacing fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -509,10 +509,17 @@ img.decorative-line {
 }
 
 .navbar .navbar-brand img {
-	width: 50px;
+	width: 30px;
 	/* height: 26px; */
 }
-
+@media (min-width: 991px) {
+	.navbar .navbar-brand img {
+		width: 80px;
+	}
+}
+.top-nav-collapse .navbar-brand img {
+	width: 30px;
+}
 /* Menu links */
 .navbar .nav.navbar-nav li a {
 	color: #fff;
@@ -1853,7 +1860,7 @@ a:hover.back-to-top {
 	.navbar .nav.navbar-nav li a,
 	.navbar .nav.navbar-nav.navbar-right li a	{
 		margin: 11px 10px 16px 10px;
-		padding: 24px 5px 20px 5px;
+		padding: 13px 5px 5px 5px;
 		transition: all .2s ease-in-out;
 	}
 	
